--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <h1>{{ title }}</h1>
 <nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Hall des légendes</a>
+  <a routerLink="/heroes">Champions</a>
   <a routerLink="/weapons">Armes</a>
 </nav>
 <router-outlet></router-outlet>
