--- a/src/app/components/heroes/heroes.html
+++ b/src/app/components/heroes/heroes.html
@@ -1,3 +1,19 @@
+<div style="margin-bottom: 20px">
+  <label for="sort-select">Trier par :</label>
+  <select id="sort-select" [(ngModel)]="sortBy" (change)="sortHeroes()">
+    <option value="id">ID</option>
+    <option value="name">Nom</option>
+    <option value="attaque">Attaque</option>
+    <option value="esquive">Esquive</option>
+    <option value="degats">Dégâts</option>
+    <option value="pv">PV</option>
+  </select>
+  <label for="order-select">Ordre :</label>
+  <select id="order-select" [(ngModel)]="sortOrder" (change)="sortHeroes()">
+    <option [ngValue]="true">Croissant</option>
+    <option [ngValue]="false">Décroissant</option>
+  </select>
+</div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{ hero.id }}">
