--- a/src/app/components/hero-detail/hero-detail.css
+++ b/src/app/components/hero-detail/hero-detail.css
@@ -552,3 +552,14 @@ input.error {
   gap: 10px;
   margin-bottom: 50px;
 }
+
+.form-group input {
+  max-width: 400px;
+  padding: 2px 5px;
+  font-size: 1em;
+  background-color: #0a0a0a;
+  color: #ffffff;
+  border: 2px solid #555555;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
